# ASCON_ShipApp_WihtoutC3D_Core

ship_corp_design/: CMakeLists.txt  README.md
ship_corp_design/BackEnd_App/: CMakeLists.txt  FileManipulation.cpp  FileManipulation.h  ShipSection.cpp  ShipSection.h
ship_corp_design/UI_App/: CMakeLists.txt  DrawingWdgt.cpp  DrawingWdgt.h  MainWnd.cpp  MainWnd.h  MainWnd.ui  MapWdgt.cpp  MapWdgt.h  main.cpp  ui_MainWnd.h
